--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
 
-    <link rel="icon" type="image/png" href="/portfolio.png2" />
+    <link rel="icon" type="image/png" href="/portfolio2.png" />
   </head>
   <body>
     <div id="root"></div>
